--- a/starwars/templates/base.html
+++ b/starwars/templates/base.html
@@ -14,7 +14,7 @@
 
     {% block header %}<div id="header">
 
-        <table id="header-tbl" style="width:100%">
+        <table id="header-tbl">
             <tbody>
                 <tr>
                     <td id="header-tbl-lhs" align="center">
@@ -40,8 +40,45 @@
     </div>{% endblock %}
 
     {% block top-bar %}<div id="top-bar">
-	{% block menu %}<div id="menu">
-	</div>{% endblock %}
+        <table id="top-bar-tbl">
+            <tbody>
+                <tr>
+                    {% block top-bar-lhs %}<td id="top-bar-tbl-lhs">
+                        {% block menu %}<div id="menu">
+                        <table id="menu-tbl">
+                            <tbody>
+                                <tr>
+                                    <td class="menu-tbl-item">
+                                        <a href="#">Home</a>
+                                    </td>
+                                    <td class="menu-tbl-item">
+                                        <a href="#">About</a>
+                                    </td>
+                                    <td class="menu-tbl-item">
+                                        <a href="#">Comment</a>
+                                    </td>
+                                    <td class="menu-tbl-item">
+                                        <a href="#">Contact</a>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>{% endblock %}
+                    </td>{% endblock %}
+
+                    {% block top-bar-rhs %}<td id="top-bar-tbl-rhs" align="right">
+                        <form name="cse" id="searchbox" action="http://www.google.com/cse">
+                            <input type="hidden" name="cref" value="http://blackhan.ch/starwars/home" />
+                            <input type="hidden" name="ie" value="utf-8" />
+                            <input type="hidden" name="hl" value="" />
+                            <input name="q" type="text" id="s"/>
+                            <input type="submit" name="sa" value="Search" style="display: none;"/>
+                        </form>
+                        <script type="text/javascript" src="http://www.google.com/cse/tools/onthefly?form=searchbox&lang=en"></script>
+                    </td>{% endblock %}
+                </tr>
+            </tbody>
+        </table>
     </div>{% endblock %}
 
     {% block content %}<div id="content">
