--- a/starwars/home/templates/index.html
+++ b/starwars/home/templates/index.html
@@ -1,1 +1,122 @@
 {% extends "base.html" %}
+
+{% block content %}<div id="content">
+    <table id="content-tbl">
+        <tbody>
+            <tr>
+                <td id="content-tbl-center">
+
+                    <table class="gallery-tbl" align="center">
+                        <tbody>
+                            <tr>
+                                <td class="gallery-tbl-portrait">
+                                    <div></div>
+                                </td>
+
+                                <td class="gallery-tbl-lhs">
+                                    <div></div>
+                                </td>
+
+                                <td class="gallery-tbl-center" align="center">
+                                    <div class="gallery-wrapper">
+                                        <div class="gallery-area">
+                                            <ul class="gallery-imgs">
+                                                <li><div class="gallery-img">img</div></li>
+                                                <li><div class="gallery-img">img</div></li>
+                                                <li><div class="gallery-img">img</div></li>
+                                                <li><div class="gallery-img">img</div></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </td>
+
+                                <td class="gallery-tbl-rhs">
+                                    <div></div>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+
+                    <table class="gallery-tbl" align="center">
+                        <tbody>
+                            <tr>
+                                <td class="gallery-tbl-portrait">
+                                    <div></div>
+                                </td>
+
+                                <td class="gallery-tbl-lhs">
+                                    <div></div>
+                                </td>
+
+                                <td class="gallery-tbl-center" align="center">
+                                    <div class="gallery-wrapper">
+                                        <div class="gallery-area">
+                                            <ul class="gallery-imgs">
+                                                <li><div class="gallery-img">img</div></li>
+                                                <li><div class="gallery-img">img</div></li>
+                                                <li><div class="gallery-img">img</div></li>
+                                                <li><div class="gallery-img">img</div></li>
+                                                <li><div class="gallery-img">img</div></li>
+                                                <li><div class="gallery-img">img</div></li>
+                                                <li><div class="gallery-img">img</div></li>
+                                                <li><div class="gallery-img">img</div></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </td>
+
+                                <td class="gallery-tbl-rhs">
+                                    <div></div>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+
+                    <table class="gallery-tbl" align="center">
+                        <tbody>
+                            <tr>
+                                <td class="gallery-tbl-portrait">
+                                    <div></div>
+                                </td>
+
+                                <td class="gallery-tbl-lhs">
+                                    <div></div>
+                                </td>
+
+                                <td class="gallery-tbl-center" align="center">
+                                    <div class="gallery-wrapper">
+                                        <div class="gallery-area">
+                                            <ul class="gallery-imgs">
+                                                <li><div class="gallery-img">img</div></li>
+                                                <li><div class="gallery-img">img</div></li>
+                                                <li><div class="gallery-img">img</div></li>
+                                                <li><div class="gallery-img">img</div></li>
+                                                <li><div class="gallery-img">img</div></li>
+                                                <li><div class="gallery-img">img</div></li>
+                                                <li><div class="gallery-img">img</div></li>
+                                                <li><div class="gallery-img">img</div></li>
+                                                <li><div class="gallery-img">img</div></li>
+                                                <li><div class="gallery-img">img</div></li>
+                                                <li><div class="gallery-img">img</div></li>
+                                                <li><div class="gallery-img">img</div></li>
+                                                <li><div class="gallery-img">img</div></li>
+                                                <li><div class="gallery-img">img</div></li>
+                                                <li><div class="gallery-img">img</div></li>
+                                                <li><div class="gallery-img">img</div></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </td>
+
+                                <td class="gallery-tbl-rhs">
+                                    <div></div>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</div>{% endblock %}
