--- a/starwars/templates/base.html
+++ b/starwars/templates/base.html
@@ -5,8 +5,15 @@
     <title>Star Wars Micro Machines</title>
     {% endblock %}
 
-    {% block css %}
+    {% block css-base %}
     <link rel="stylesheet" type="text/css" media="screen" href="{{ MEDIA_URL }}css/style.css" />
+    {% endblock %}
+
+    {% block css-base-ext %}
+    {% endblock %}
+
+    {% block jquery %}
+    <script type="text/javascript" src="{{ MEDIA_URL }}lib/jquery/jquery.min.js"></script>
     {% endblock %}
 
 {% endblock %}</head>
@@ -49,16 +56,16 @@
                             <tbody>
                                 <tr>
                                     <td class="menu-tbl-item">
-                                        <a href="#">Home</a>
+                                        <a href="{% url home:master %}">Home</a>
                                     </td>
                                     <td class="menu-tbl-item">
-                                        <a href="#">About</a>
+                                        <a href="{% url about:master %}">About</a>
                                     </td>
                                     <td class="menu-tbl-item">
-                                        <a href="#">Comment</a>
+                                        <a href="{% url comment:master %}">Comment</a>
                                     </td>
                                     <td class="menu-tbl-item">
-                                        <a href="#">Contact</a>
+                                        <a href="{% url contact:master %}">Contact</a>
                                     </td>
                                 </tr>
                             </tbody>
