--- a/starwars/templates/base.html
+++ b/starwars/templates/base.html
@@ -12,8 +12,11 @@
     {% block css-base-ext %}
     {% endblock %}
 
-    {% block jquery %}
+    {% block java-script %}
     <script type="text/javascript" src="{{ MEDIA_URL }}lib/jquery/jquery.min.js"></script>
+    {% endblock %}
+
+    {% block javascript-ext %}
     {% endblock %}
 
 {% endblock %}</head>
