--- a/starwars/media/css/style.css
+++ b/starwars/media/css/style.css
@@ -188,7 +188,7 @@ div.gallery-h-spacer {
 
 div.gallery-v-spacer {
     float: left;
-    width: 4px;
+    width: 2px;
     height: 100%;
     background-color: aqua;
 }
@@ -248,6 +248,7 @@ div.gallery .img-g,
 div.gallery .img-b {
     height: 160px;
     width: 172px;
+    border-right: 2px solid fuchsia;
 }
 
 div.gallery .img-r { background-color: red; }
